[package]
name = "snake"
version = "0.1.0"
authors = ["Ivan Tham <pickfire@riseup.net>"]
edition = "2018"

[dependencies]
argh = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "macros", "net", "rt", "rt-multi-thread", "sync"] }
termion = "1.5"
